--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   flutter_svg: ^2.0.10
   fl_chart: ^0.68.0
   provider: ^6.1.2
+  flutter_bloc: ^9.0.0
+  dio: ^5.8.0+1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
