--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_bloc: ^9.0.0
   dio: ^5.8.0+1
   flutter_secure_storage: ^9.2.4
+  logger: ^2.5.0
+  fluttertoast: ^8.2.10
 
 dev_dependencies:
   flutter_test:
