--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   logger: ^2.5.0
   fluttertoast: ^8.2.10
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
