--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   logger: ^2.5.0
   fluttertoast: ^8.2.10
   intl: ^0.20.2
+  animated_switcher_plus: ^1.1.1
 
 dev_dependencies:
   flutter_test:
