--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   fluttertoast: ^8.2.10
   intl: ^0.20.2
   animated_switcher_plus: ^1.1.1
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  universal_platform: ^1.1.0
+  image_picker_for_web: ^3.0.6
 
 dev_dependencies:
   flutter_test:
